--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A TypeScript port of Kirk McDonald's amazing Factorio Calculator (https://github.com/KirkMcDonald/kirkmcdonald.github.io)",
   "scripts": {
     "build": "node build-scripts/build.js",
+    "serve": "node build-scripts/build.js -s",
     "watch": "concurrently \"node build-scripts/build.js -w\" \"node build-scripts/build.js -s\""
   },
   "repository": "https://github.com/acid1103/kirkmcdonald.github.io.git",
@@ -33,6 +34,7 @@
     "tsify": "^4.0.1",
     "tslint": "^5.17.0",
     "typescript": "^3.5.1",
+    "uglifyify": "^5.0.1",
     "watchify": "^3.11.1"
   }
 }
